--- a/src/components/Meals/AvailableMeals.module.css
+++ b/src/components/Meals/AvailableMeals.module.css
@@ -6,6 +6,11 @@
     animation: meals-appear 1s ease-out forwards;
   }
   
+.MealsLoading{
+  text-align: center;
+  color:white;
+}
+
   .meals ul {
     list-style: none;
     margin: 0;
