--- a/src/components/Meals/AvailableMeals.module.css
+++ b/src/components/Meals/AvailableMeals.module.css
@@ -11,6 +11,11 @@
   color:white;
 }
 
+.MealsError{
+  text-align: center;
+  color:red;
+}
+
   .meals ul {
     list-style: none;
     margin: 0;
