--- a/src/components/Layout/HeaderCartButton.module.css
+++ b/src/components/Layout/HeaderCartButton.module.css
@@ -5,11 +5,12 @@
     background-color: #4d1601;
     color: white;
     padding: 0.75rem 3rem;
-    display: flex;
+    display: inline-flex;
     justify-content: space-around;
     align-items: center;
     border-radius: 25px;
     font-weight: bold;
+    margin: 1rem;
   }
   
   .button:hover,
